--- a/AnusithExpress.web.mvc/Views/Account/CRegister.cshtml
+++ b/AnusithExpress.web.mvc/Views/Account/CRegister.cshtml
@@ -84,6 +84,7 @@
 
     </div>
     <script src="~/Styles/js/jquery-1.11.1.min.js"></script>
-    <script src="~/Styles/js/bootstrap.js"></script>
+    <script src="~/Styles/js/bootstrap.min.js"></script>
+  
 </body>
 </html>
