--- a/AnusithExpress.web.mvc/Views/Admin/ItemDescription.cshtml
+++ b/AnusithExpress.web.mvc/Views/Admin/ItemDescription.cshtml
@@ -31,6 +31,7 @@
             error: function ()
             {
                 alert("Server error");
+<a href="~/Views/Admin/ItemDescription.cshtml">~/Views/Admin/ItemDescription.cshtml</a>
             }
 
         });
