--- a/AnusithExpress.web.mvc/Views/Shared/_NavMenu.cshtml
+++ b/AnusithExpress.web.mvc/Views/Shared/_NavMenu.cshtml
@@ -6,7 +6,7 @@
     </a>
     <ul class="children collapse" id="sub-item-1">
         <li>
-            <a class="" href="@Url.Action("CreateItem","Delivery")">
+            <a class="" href="@Url.Action("CreateUpdateItem","Customer")">
                 <span class="fa fa-arrow-right">&nbsp;</span> ເພີ້ມລາຍການສີນຄ້າ
             </a>
         </li>
@@ -62,8 +62,13 @@
             </a>
         </li>
         <li>
-            <a class="" href="@Url.Action("CreateItem","Delivery")">
-                <span class="fa fa-arrow-right">&nbsp;</span> ເພີ້ມລາຍການ
+            <a class="" href="@Url.Action("ItemList","Admin")">
+                <span class="fa fa-arrow-right">&nbsp;</span> ລາຍການສີນຄ້າ
+            </a>
+        </li>
+        <li>
+            <a class="" href="#">
+                <span class="fa fa-arrow-right">&nbsp;</span> ຈັດສີນຄ້າສົ່ງ
             </a>
         </li>
         <li>
