--- a/AnusithExpress.web.mvc/Views/Admin/Customer.cshtml
+++ b/AnusithExpress.web.mvc/Views/Admin/Customer.cshtml
@@ -8,22 +8,20 @@
 
 @foreach (var customer in Model)
 {
-<div>
-  
-        <div class="col-md-2">
-            <input type="button" onclick="window.location = '@Url.Action("CustomerDetail","Admin", new { customerId= customer.CustomerId})'" value="@customer.CustomerId" />
-            <span>@customer.CountItems</span>
-            <span>@customer.CountItemsToPickup</span>
-            <span>@customer.CountItemsPickedUp</span>
-            <span>@customer.CountItemsInProcess</span>
-            <span>@customer.CountItemsToSend</span>
-            <span>@customer.CountItemsAlreadySend</span>
-            <span>@customer.CountItemsCannotContact</span>
+    <div class="card col-md-3">
+        <div class="card-body">
+            <div>
+                <input type="button" class="btn btn-dark btn-lg" onclick="window.location = '@Url.Action("CustomerDetail","Admin", new { customerId= customer.CustomerId})'" value="@customer.CustomerId" />
+                <span>@customer.CountItems</span>
+                <span>@customer.CountItemsToPickup</span>
+                <span>@customer.CountItemsPickedUp</span>
+                <span>@customer.CountItemsInProcess</span>
+                <span>@customer.CountItemsToSend</span>
+                <span>@customer.CountItemsAlreadySend</span>
+                <span>@customer.CountItemsCannotContact</span>
+            </div>
         </div>
-
-  
-    
-</div> 
+    </div>
 }
 
 
