--- a/AnusithExpress.web.mvc/Views/Customer/CProfile.cshtml
+++ b/AnusithExpress.web.mvc/Views/Customer/CProfile.cshtml
@@ -4,7 +4,7 @@
 }
 @model AnousithExpress.Data.SingleViewModels.CustomerProfileModel
 <h2>CProfile</h2>
-
+<button type="button" onclick='window.location = "@Url.Action("Index","Customer")"'>ກັບໄປຫນ້າຫລັກ</button>
 <div>
     <div>
 
