--- a/AnusithExpress.web.mvc/Views/Customer/Index.cshtml
+++ b/AnusithExpress.web.mvc/Views/Customer/Index.cshtml
@@ -3,8 +3,8 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
-
 <h2>Index</h2>
 @Html.ActionLink("ເພີ່ມລາຍການ", "CreateUpdateItem", "Customer")
 @Html.ActionLink("ລາຍການສີນຄ້າ", "ViewItems", "Customer")
+@Html.ActionLink("ສັງລວມ", "ConsolidatedList", "Customer")
 @Html.ActionLink("ຂໍ້ມູນສ່ວນໂຕ", "CProfile", "Customer")
