--- a/AnusithExpress.web.mvc/Views/Customer/ViewItems.cshtml
+++ b/AnusithExpress.web.mvc/Views/Customer/ViewItems.cshtml
@@ -8,6 +8,7 @@
 <div>
     @ViewBag.Message
 </div>
+<button onclick='window.location = "@Url.Action("Index","Customer")"'>ກັບໄປຫນ້າຫລັກ</button>
 <div>
     <table class="table table-bordered">
         <thead>
@@ -45,3 +46,4 @@
 
     </table>
 </div>
+<button onclick='window.location = "@Url.Action("Index","Customer")"'>ກັບໄປຫນ້າຫລັກ</button>
