--- a/AnusithExpress.web.mvc/Views/Shared/_NavMenu.cshtml
+++ b/AnusithExpress.web.mvc/Views/Shared/_NavMenu.cshtml
@@ -16,18 +16,13 @@
             </a>
         </li>
         <li>
-            <a class="" href="#">
+            <a class="" href="@Url.Action("ConsolidatedList","Customer")">
                 <span class="fa fa-arrow-right">&nbsp;</span> ສັງລວມ
             </a>
         </li>
         <li>
             <a class="" href="@Url.Action("CProfile","Customer")">
                 <span class="fa fa-arrow-right">&nbsp;</span> ຂໍ້ມູນສ່ວນຕົວ
-            </a>
-        </li>
-        <li>
-            <a class="" href="@Url.Action("CRegister","Account")">
-                <span class="fa fa-arrow-right">&nbsp;</span> ສະໜັກສະມາຊິກ
             </a>
         </li>
     </ul>
