please merge my project the pull to me again

--- a/AnusithExpress.web.mvc/Views/Admin/Customer.cshtml
+++ b/AnusithExpress.web.mvc/Views/Admin/Customer.cshtml
@@ -8,17 +8,23 @@
 
 @foreach (var customer in Model)
 {
-    <div class="card col-md-3">
+    <div class="col-md-2">
         <div class="card-body">
             <div>
-                <input type="button" class="btn btn-dark btn-lg" onclick="window.location = '@Url.Action("CustomerDetail","Admin", new { customerId= customer.CustomerId})'" value="@customer.CustomerId" />
-                <span>@customer.CountItems</span>
-                <span>@customer.CountItemsToPickup</span>
-                <span>@customer.CountItemsPickedUp</span>
-                <span>@customer.CountItemsInProcess</span>
-                <span>@customer.CountItemsToSend</span>
-                <span>@customer.CountItemsAlreadySend</span>
-                <span>@customer.CountItemsCannotContact</span>
+               
+                <button type="button" class="btn btn-success count-info" onclick="window.location = '@Url.Action("CustomerDetail","Admin", new { customerId= customer.CustomerId})'" value="@customer.CustomerId">
+                    @customer.CustomerId
+                    <em class="fa fa-envelope"></em><span class="label label-danger">15</span>
+                </button>
+
+                @*<span>@customer.CountItems</span>
+        <span>@customer.CountItemsToPickup</span>
+        <span>@customer.CountItemsPickedUp</span>
+        <span>@customer.CountItemsInProcess</span>
+        <span>@customer.CountItemsToSend</span>
+        <span>@customer.CountItemsAlreadySend</span>
+        <span>@customer.CountItemsCannotContact</span>*@
+
             </div>
         </div>
     </div>
