--- a/AnusithExpress.web.mvc/Views/Shared/_Navbar.cshtml
+++ b/AnusithExpress.web.mvc/Views/Shared/_Navbar.cshtml
@@ -10,9 +10,9 @@
             <a class="navbar-brand" href="#"><span>Admin</span>Panel</a>
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
-                    <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
+                    @*<a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
                         <em class="fa fa-envelope"></em><span class="label label-danger">15</span>
-                    </a>
+                    </a>*@
                     <ul class="dropdown-menu dropdown-messages">
                         <li>
                             <div class="dropdown-messages-box">
