--- a/AnusithExpress.web.mvc/Views/Customer/CreateUpdateItem.cshtml
+++ b/AnusithExpress.web.mvc/Views/Customer/CreateUpdateItem.cshtml
@@ -50,7 +50,7 @@
       </div>
       <button class="btn btn-primary" type="submit" name="submit" value=""><span class="glyphicon glyphicon-saved"></span> ບັນທຶກລາຍການ</button>
       <a class=" btn btn-success" href="@Url.Action("ViewItems","Customer")"><span class="glyphicon glyphicon-arrow-left"></span> ກັບໄປຫາລາຍການສີນຄ້າ</a>
-      <a class=" btn btn-info" href="@Url.Action("Index","Customer")"><span class="glyphicon glyphicon-home"></span> ກັບໄປຫນ້າຫລັກ</a>
+      <a class=" btn btn-info" href="@Url.Action("Index","Admin")"><span class="glyphicon glyphicon-home"></span> ກັບໄປຫນ້າຫລັກ</a>
 }
       </div>
   </div>
