--- a/AnusithExpress.web.mvc/Views/Delivery/CreateItem.cshtml
+++ b/AnusithExpress.web.mvc/Views/Delivery/CreateItem.cshtml
@@ -6,55 +6,60 @@
 
 
 @model AnousithExpress.Data.SingleViewModels.ItemSingleModel
-<h3>ເພີ້ມລາຍການສີນຄ້າ</h3>
+<h3></h3>
 <div>
     @ViewBag.Message
 </div>
-<div>
-    @using (Html.BeginForm("CreateItem", "Delivery", FormMethod.Post))
-    {
-        @Html.HiddenFor(m => m.Id)
-        <div class="form-group">
-            @Html.Label("ເບີໂທຜູ້ສົ່ງ")
-            @Html.TextBoxFor(m => m.CustomerPhonenumber,new { @class="form-control"})
-            @Html.ValidationMessageFor(m => m.CustomerPhonenumber)
-        </div>
-        <div class="form-group">
-            @Html.Label("ປະເພດສີນຄ້າ")
-            @Html.TextBoxFor(m => m.ItemName, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.ItemName)
-        </div>
-        <div class="form-group">
-            @Html.Label("ຊື່ຜູ້ຮັບ")
-            @Html.TextBoxFor(m => m.ReceiverName, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.ReceiverName)
-        </div>
+<div class="panel panel-primary">
+    <div class="panel panel-heading"><span class="glyphicon glyphicon-cog"></span> ເພີ້ມລາຍການ</div>
+    <div class="panel panel-body">
+        <div>
+            @using (Html.BeginForm("CreateItem", "Delivery", FormMethod.Post))
+        {
+            @Html.HiddenFor(m => m.Id)
+            <div class="form-group">
+                @Html.Label("ເບີໂທຜູ້ສົ່ງ")
+                @Html.TextBoxFor(m => m.CustomerPhonenumber, new { @class = "form-control", @type = "number" })
+                @Html.ValidationMessageFor(m => m.CustomerPhonenumber)
+            </div>
+            <div class="form-group">
+                @Html.Label("ປະເພດສີນຄ້າ")
+                @Html.TextBoxFor(m => m.ItemName, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.ItemName)
+            </div>
+            <div class="form-group">
+                @Html.Label("ຊື່ຜູ້ຮັບ")
+                @Html.TextBoxFor(m => m.ReceiverName, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.ReceiverName)
+            </div>
 
-        <div class="form-group">
-            @Html.Label("ເບີໂທຜູ້ຮັບ")
-            @Html.TextBoxFor(m => m.ReceipverPhone, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.ReceipverPhone)
-        </div>
-        <div class="form-group">
-            @Html.Label("ທີ່ຢູ່ຜູ້ຮັບ")
-            @Html.TextBoxFor(m => m.ReceiverAddress, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.ReceiverAddress)
-        </div>
-        <div class="form-group">
-            @Html.Label("ເກັບເງີນປາຍທາງ ສະກຸນເງີນກີບ")
-            @Html.TextBoxFor(m => m.ItemValue_Kip, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.Label("ເກັບເງີນປາຍທາງ ສະກຸນເງີນບາດ")
-            @Html.TextBoxFor(m => m.ItemValue_Baht, new { @class = "form-control  bfh-number" })
-        </div>
-        <div class="form-group">
-            @Html.Label("ເກັບເງີນປາຍທາງ ສະກຸນເງີນໂດລ້າ")
-            @Html.TextBoxFor(m => m.ItemValue_Dollar, new { @class = "form-control", @type="number" })
-        </div>
-        <button class="btn btn-primary" type="submit" name="submit"><span class="glyphicon glyphicon-save"></span> ບັນທຶກລາຍການ</button>
-         @*<input type="submit" name="submit" value="ບັນທຶກລາຍການ" />*@
-        @*<a class="btn btn-primary" href="@Url.Action("Index","Customer")">ກັບໄປຫນ້າຫລັກ</a>*@
+            <div class="form-group">
+                @Html.Label("ເບີໂທຜູ້ຮັບ")
+                @Html.TextBoxFor(m => m.ReceipverPhone, new { @class = "form-control", @type = "number" })
+                @Html.ValidationMessageFor(m => m.ReceipverPhone)
+            </div>
+            <div class="form-group">
+                @Html.Label("ທີ່ຢູ່ຜູ້ຮັບ")
+                @Html.TextBoxFor(m => m.ReceiverAddress, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.ReceiverAddress)
+            </div>
+            <div class="form-group">
+                @Html.Label("ເກັບເງີນປາຍທາງ ສະກຸນເງີນກີບ")
+                @Html.TextBoxFor(m => m.ItemValue_Kip, new { @class = "form-control", @type = "number" })
+            </div>
+            <div class="form-group">
+                @Html.Label("ເກັບເງີນປາຍທາງ ສະກຸນເງີນບາດ")
+                @Html.TextBoxFor(m => m.ItemValue_Baht, new { @class = "form-control  bfh-number", @type = "number" })
+            </div>
+            <div class="form-group">
+                @Html.Label("ເກັບເງີນປາຍທາງ ສະກຸນເງີນໂດລ້າ")
+                @Html.TextBoxFor(m => m.ItemValue_Dollar, new { @class = "form-control", @type = "number" })
+            </div>
+            <button class="btn btn-primary" type="submit" name="submit"><span class="glyphicon glyphicon-save"></span> ບັນທຶກລາຍການ</button>
+            @*<input type="submit" name="submit" value="ບັນທຶກລາຍການ" />*@
+            @*<a class="btn btn-primary" href="@Url.Action("Index","Customer")">ກັບໄປຫນ້າຫລັກ</a>*@
     }
 
+        </div>
+    </div>
 </div>
