--- a/AnusithExpress.web.mvc/Views/Shared/_NavMenu.cshtml
+++ b/AnusithExpress.web.mvc/Views/Shared/_NavMenu.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <li><a href="/admin/dashboard"><em class="fa fa-dashboard">&nbsp;</em> ໜ້າຫລັກ</a></li>
-<li class="parent ">
+<li class="parent bg-blue">
     <a data-toggle="collapse" href="#sub-item-1">
         <em class="fa fa-navicon">&nbsp;</em> ລູກຄ້າ <span data-toggle="collapse" href="#sub-item-1" class="icon pull-right"><em class="fa fa-plus"></em></span>
     </a>
